minor fix to comment and state definition to address and issue pointed out by a student. Removed old tavily code that was previously commented out.

--- a/module-4/parallelization.ipynb
+++ b/module-4/parallelization.ipynb
@@ -87,14 +87,14 @@
    "source": [
     "from IPython.display import Image, display\n",
     "\n",
-    "from typing import Any\n",
+    "from typing import Any, List\n",
     "from typing_extensions import TypedDict\n",
     "\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "\n",
     "class State(TypedDict):\n",
-    "    # The operator.add reducer fn makes this append-only\n",
-    "    state: str\n",
+    "    # Note, no reducer function. \n",
+    "    state: List[str]\n",
     "\n",
     "class ReturnNodeValue:\n",
     "    def __init__(self, node_secret: str):\n",
@@ -322,8 +322,8 @@
      "output_type": "stream",
      "text": [
       "Adding I'm A to []\n",
-      "Adding I'm B to [\"I'm A\"]\n",
       "Adding I'm C to [\"I'm A\"]\n",
+      "Adding I'm B to [\"I'm A\"]\n",
       "Adding I'm D to [\"I'm A\", \"I'm B\", \"I'm C\"]\n"
      ]
     },
@@ -522,8 +522,8 @@
      "output_type": "stream",
      "text": [
       "Adding I'm A to []\n",
-      "Adding I'm B to [\"I'm A\"]\n",
       "Adding I'm C to [\"I'm A\"]\n",
+      "Adding I'm B to [\"I'm A\"]\n",
       "Adding I'm B2 to [\"I'm A\", \"I'm B\", \"I'm C\"]\n",
       "Adding I'm D to [\"I'm A\", \"I'm B\", \"I'm B2\", \"I'm C\"]\n"
      ]
@@ -638,17 +638,14 @@
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "from langchain_community.document_loaders import WikipediaLoader\n",
-    "#from langchain_community.tools import TavilySearchResults\n",
-    "from langchain_tavily import TavilySearch\n",
+    "from langchain_tavily import TavilySearch  # updated since filming\n",
     "\n",
     "def search_web(state):\n",
     "    \n",
     "    \"\"\" Retrieve docs from web search \"\"\"\n",
     "\n",
     "    # Search\n",
-    "#    tavily_search = TavilySearchResults(max_results=3)\n",
     "    tavily_search = TavilySearch(max_results=3)\n",
-    "    #search_docs = tavily_search.invoke(state['question'])\n",
     "    data = tavily_search.invoke({\"query\": state['question']})\n",
     "    search_docs = data.get(\"results\", data)\n",
     "\n",
@@ -727,7 +724,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Nvidia's Q2 2024 earnings report was impressive by most measures, despite the company's stock taking a hit in after-hours trading. The report highlighted Nvidia's dominance in the AI-focused chip market, with the data center segment accounting for much of its revenue. The company's chief financial officer noted that data center revenue in China grew sequentially in Q2, significantly contributing to overall data center revenue.\""
+       "\"Nvidia's Q2 2025 earnings were strong, as the company reported an earnings per share (EPS) of $1.04, beating the forecast of $1.01, resulting in a 2.97% surprise. Revenue also exceeded expectations, with the company reporting $46.74 billion in revenue and adjusted earnings per share of $1.05, both surpassing analyst estimates. This performance drove a stock uptick, indicating positive market reception. However, there were concerns about the company's operations in China, which remains a question mark.\""
       ]
      },
      "execution_count": 17,
@@ -736,7 +733,7 @@
     }
    ],
    "source": [
-    "result = graph.invoke({\"question\": \"How were Nvidia's Q2 2024 earnings\"})\n",
+    "result = graph.invoke({\"question\": \"How were Nvidia's Q2 2025 earnings\"})\n",
     "result['answer'].content"
    ]
   },
@@ -790,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "ff35e68f-4017-4f45-93cf-ddbb355a0bc1",
    "metadata": {},
    "outputs": [
@@ -798,7 +795,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nvidia's Q2 2025 earnings were strong, with the company reporting an EPS of $1.04, which beat the forecast of $1.01, resulting in a 2.97% surprise. Revenue also exceeded expectations, coming in at $46.74 billion. This performance led to a positive reaction in the stock market.\n"
+      "Nvidia's Q2 2025 earnings were strong, with the company reporting an earnings per share (EPS) of $1.04, beating the forecast of $1.01. Revenue also exceeded expectations, coming in at $46.7 billion, surpassing the previous quarter's record of $44.1 billion and besting economist forecasts of $46.05 billion. This resulted in a positive surprise and drove a stock uptick.\n"
      ]
     }
    ],
