Markdown only change to update the Studio disclaimer to point to the new docs

--- a/module-1/deployment.ipynb
+++ b/module-1/deployment.ipynb
@@ -59,27 +59,36 @@
     "- Provides a task queue for managing asynchronous operations\n",
     "- Offers persistence for maintaining state across interactions\n",
     "\n",
-    "`LangGraph Cloud` --\n",
+    "`LangSmith Deployment` (formerly `LangGraph Cloud`) --\n",
     "- Hosted service for the LangGraph API\n",
     "- Allows deployment of graphs from GitHub repositories\n",
     "- Also provides monitoring and tracing for deployed graphs\n",
     "- Accessible via a unique URL for each deployment\n",
     "\n",
-    "`LangGraph Studio` --\n",
+    "`LangSmith Studio` (formerly `LangGraph Studio`) --\n",
     "- Integrated Development Environment (IDE) for LangGraph applications\n",
     "- Uses the API as its back-end, allowing real-time testing and exploration of graphs\n",
-    "- Can be run locally or with cloud-deployment\n",
+    "- Can be run locally or with cloud-deployment. See below.\n",
     "\n",
     "`LangGraph SDK` --\n",
     "- Python library for programmatically interacting with LangGraph graphs\n",
     "- Provides a consistent interface for working with graphs, whether served locally or in the cloud\n",
     "- Allows creation of clients, access to assistants, thread management, and execution of runs\n",
     "\n",
-    "## Testing Locally\n",
+    "## Testing Locally"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f1683b9-fca1-4169-a8c5-6dd07cc2a7c8",
+   "metadata": {},
+   "source": [
+    "## Studio\n",
     "\n",
-    "**⚠️ DISCLAIMER**\n",
+    "**⚠️ Notice**\n",
     "\n",
-    "Since the filming of these videos, we've updated Studio so that it can be run locally and opened in your browser. This is now the preferred way to run Studio (rather than using the Desktop App as shown in the video). See documentation [here](https://langchain-ai.github.io/langgraph/concepts/langgraph_studio/#local-development-server) on the local development server and [here](https://langchain-ai.github.io/langgraph/how-tos/local-studio/#run-the-development-server). To start the local development server, run the following command in your terminal in the `/studio` directory in this module:\n",
+    "Since filming these videos, we've updated Studio so that it can now be run locally and accessed through your browser. This is the preferred way to run Studio instead of using the Desktop App shown in the video. It is now called _LangSmith Studio_ instead of _LangGraph Studio_. Detailed setup instructions are available in the \"Getting Setup\" guide at the start of the course. You can find a description of Studio [here](https://docs.langchain.com/langsmith/studio), and specific details for local deployment [here](https://docs.langchain.com/langsmith/quick-start-studio#local-development-server).  \n",
+    "To start the local development server, run the following command in your terminal in the `/studio` directory in this module:\n",
     "\n",
     "```\n",
     "langgraph dev\n",
@@ -92,7 +101,7 @@
     "- 📚 API Docs: http://127.0.0.1:2024/docs\n",
     "```\n",
     "\n",
-    "Open your browser and navigate to the Studio UI: `https://smith.langchain.com/studio/?baseUrl=http://127.0.0.1:2024`."
+    "Open your browser and navigate to the **Studio UI** URL shown above."
    ]
   },
   {
@@ -392,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "academy",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -406,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
