--- a/module-3/breakpoints.ipynb
+++ b/module-3/breakpoints.ipynb
@@ -377,9 +377,10 @@
    "source": [
     "### Breakpoints with LangGraph API\n",
     "\n",
-    "**⚠️ DISCLAIMER**\n",
+    "**⚠️ Notice**\n",
     "\n",
-    "Since the filming of these videos, we've updated Studio so that it can be run locally and opened in your browser. This is now the preferred way to run Studio (rather than using the Desktop App as shown in the video). See documentation [here](https://langchain-ai.github.io/langgraph/concepts/langgraph_studio/#local-development-server) on the local development server and [here](https://langchain-ai.github.io/langgraph/how-tos/local-studio/#run-the-development-server). To start the local development server, run the following command in your terminal in the `/studio` directory in this module:\n",
+    "Since filming these videos, we've updated Studio so that it can now be run locally and accessed through your browser. This is the preferred way to run Studio instead of using the Desktop App shown in the video. It is now called _LangSmith Studio_ instead of _LangGraph Studio_. Detailed setup instructions are available in the \"Getting Setup\" guide at the start of the course. You can find a description of Studio [here](https://docs.langchain.com/langsmith/studio), and specific details for local deployment [here](https://docs.langchain.com/langsmith/quick-start-studio#local-development-server).  \n",
+    "To start the local development server, run the following command in your terminal in the `/studio` directory in this module:\n",
     "\n",
     "```\n",
     "langgraph dev\n",
@@ -392,7 +393,7 @@
     "- 📚 API Docs: http://127.0.0.1:2024/docs\n",
     "```\n",
     "\n",
-    "Open your browser and navigate to the Studio UI: `https://smith.langchain.com/studio/?baseUrl=http://127.0.0.1:2024`.\n",
+    "Open your browser and navigate to the **Studio UI** URL shown above.\n",
     "\n",
     "The LangGraph API [supports breakpoints](https://langchain-ai.github.io/langgraph/cloud/how-tos/human_in_the_loop_breakpoint/#sdk-initialization). "
    ]
@@ -524,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "academy",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
