--- a/module-4/parallelization.ipynb
+++ b/module-4/parallelization.ipynb
@@ -241,7 +241,7 @@
       "Adding I'm B to [\"I'm A\"]\n",
       "Adding I'm C to [\"I'm A\"]\n",
       "An error occurred: At key 'state': Can receive only one value per step. Use an Annotated key to handle multiple values.\n",
-      "For troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/INVALID_CONCURRENT_GRAPH_UPDATE\n"
+      "For troubleshooting, visit: https://docs.langchain.com/oss/python/langgraph/errors/INVALID_CONCURRENT_GRAPH_UPDATE\n"
      ]
     }
    ],
@@ -522,8 +522,8 @@
      "output_type": "stream",
      "text": [
       "Adding I'm A to []\n",
-      "Adding I'm C to [\"I'm A\"]\n",
       "Adding I'm B to [\"I'm A\"]\n",
+      "Adding I'm C to [\"I'm A\"]\n",
       "Adding I'm B2 to [\"I'm A\", \"I'm B\", \"I'm C\"]\n",
       "Adding I'm D to [\"I'm A\", \"I'm B\", \"I'm B2\", \"I'm C\"]\n"
      ]
@@ -579,7 +579,7 @@
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\", temperature=0) "
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0) "
    ]
   },
   {
@@ -724,7 +724,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Nvidia's Q2 2025 earnings were strong, as the company reported an earnings per share (EPS) of $1.04, beating the forecast of $1.01, resulting in a 2.97% surprise. Revenue also exceeded expectations, with the company reporting $46.74 billion in revenue and adjusted earnings per share of $1.05, both surpassing analyst estimates. This performance drove a stock uptick, indicating positive market reception. However, there were concerns about the company's operations in China, which remains a question mark.\""
+       "\"Based on the provided context, Nvidia's Q2 2025 earnings were better than expected, with revenue and earnings surpassing Wall Street's expectations. Nvidia reported that sales growth for that quarter would remain above 50%, indicating strong demand for artificial intelligence infrastructure. The company also mentioned that if a custom-built processor for sales to China had been commercially available during that period, it could have added $8 billion in second-quarter sales. Additionally, Nvidia's robotics division saw $586 million in sales during the quarter, representing 69% growth on an annual basis.\""
       ]
      },
      "execution_count": 17,
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "4bc8ad8d-1365-4801-a8a5-b85cd4965119",
    "metadata": {},
    "outputs": [],
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "23919dc9-27d8-4d10-b91d-24acdf8c0fb9",
    "metadata": {},
    "outputs": [],
@@ -787,19 +787,17 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "196fcdbf-c735-4913-b118-633031666709",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ff35e68f-4017-4f45-93cf-ddbb355a0bc1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nvidia's Q2 2025 earnings were strong, with the company reporting an earnings per share (EPS) of $1.04, beating the forecast of $1.01. Revenue also exceeded expectations, coming in at $46.7 billion, surpassing the previous quarter's record of $44.1 billion and besting economist forecasts of $46.05 billion. This resulted in a positive surprise and drove a stock uptick.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "thread = await client.threads.create()\n",
     "input_question = {\"question\": \"How were Nvidia Q2 2025 earnings?\"}\n",
@@ -821,6 +819,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b7a404-37aa-4cfb-9211-5252e403c483",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -839,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
